--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,11 @@ header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    text-align: center;
+    
 }
-header nav ul {
-    display: flex;
-
+header nav ul{
+    padding: 0;
+    margin: 0;
 }
 header nav ul li {
     list-style: none;
@@ -245,16 +245,15 @@ header nav ul li a {
 
 .div-mantenimiento {
     background-color: rgb(247, 131, 54);
-    height: 200px;
     border: solid rgb(61, 162, 230);
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
+ 
 }
-
-.div-mantenimiento div {
+.p-mantenimiento {
     display: flex;
-    align-items: center;
+    color: black;
     padding: 30px;
     flex-wrap: wrap
 }
