--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,14 @@ header nav ul li a {
     text-decoration: none;
     color: white;
     margin: 0 20px 0 0;}
-.menu {
+.menu div {
     display: none;
-    color: white;
+    flex-direction: column;
+    gap: 5px;
+    width: 20px;
+    height: 3px;
+   background-color: white;
+   margin: 5px;
 }
 .titulo {
     background-image: url(../img/fondo.jpg);
@@ -459,9 +464,18 @@ footer div p {
         justify-content: space-between;
         align-items: center;
         }
-    .menu {
-      display: block;
-      margin: 0 30px 0 0;
+    .menu div {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            width: 20px;
+            height: 3px;
+           background-color: white;
+           margin: 5px;
+        
+    }
+    .menu div:hover{
+    background-color: aqua;
     }
     header nav ul li ul {
         display: none;
@@ -470,20 +484,16 @@ footer div p {
         background-color: black;
         padding: 5px;
         text-align: center;
-        
-        
-        
-       
-    }
+        transition-duration: 4s;
+        }
     header nav ul li ul :hover{
         background-color: grey;
         transform:scale(1,1);
         border-radius: 10px;
         margin: 5px;}
     header nav ul li:hover > ul {
-        display:block;
-        position: fixed;
-        
+        display: flex;
+        flex-direction: column;
     }
     
     
